--- a/values.yaml
+++ b/values.yaml
@@ -4,8 +4,8 @@ operator:
   supportOpenshift: true
   env:
     ENTANDO_DOCKER_IMAGE_VERSION_FALLBACK: 6.0.0
-    ENTANDO_DOCKER_REGISTRY_OVERRIDE: docker.io
-    ENTANDO_DOCKER_IMAGE_ORG_OVERRIDE: entando
+    #ENTANDO_DOCKER_REGISTRY_OVERRIDE: docker.io # Remove comment if you want to always use a specific docker registry
+    #ENTANDO_DOCKER_IMAGE_ORG_OVERRIDE: entando # Remove the comment if you want to always use a specific docker organization
     ENTANDO_DEFAULT_ROUTING_SUFFIX: your.domain.suffix.com
     ENTANDO_POD_READINESS_TIMEOUT_SECONDS: "600"
     ENTANDO_POD_COMPLETION_TIMEOUT_SECONDS: "600"
