--- a/templates/entando-composite-app.yaml
+++ b/templates/entando-composite-app.yaml
@@ -12,14 +12,14 @@ spec:
       metadata:
         name: "{{ .Values.app.name }}-kc"
       spec:
-        dbms: postgresql
+        dbms: "{{ .Values.app.dbms }}"
         isDefault: true
         replicas: 1
     - kind: "EntandoClusterInfrastructure"
       metadata:
         name: "{{ .Values.app.name }}-eci"
       spec:
-        dbms: postgresql
+        dbms: "{{ .Values.app.dbms }}"
         replicas: 1
         isDefault: true
     - kind: "EntandoApp"
@@ -28,7 +28,7 @@ spec:
         labels: {}
         name: "{{ .Values.app.name }}"
       spec:
-        dbms: postgresql
+        dbms: "{{ .Values.app.dbms }}"
         replicas: 1
         standardServerImage: wildfly
         ingressPath: /entando-de-app
