--- a/values.yaml
+++ b/values.yaml
@@ -11,6 +11,7 @@ operator:
     ENTANDO_POD_READINESS_TIMEOUT_SECONDS: "1000"
     ENTANDO_POD_COMPLETION_TIMEOUT_SECONDS: "1000"
     ENTANDO_DISABLE_KEYCLOAK_SSL_REQUIREMENT: "true"
+    ENTANDO_K8S_OPERATOR_IMPOSE_DEFAULT_LIMITS: "false"
   tls:
     caCrt:
     tlsCrt:
