ENG-703 added spec.parameter.SPRING_PROFILES_ACTIVE with swagger in the quickstart

--- a/templates/entando-composite-app.yaml
+++ b/templates/entando-composite-app.yaml
@@ -43,6 +43,8 @@ spec:
         replicas: 1
         standardServerImage: wildfly
         ingressPath: /entando-de-app
+        parameters:
+          SPRING_PROFILES_ACTIVE: "default,swagger"
     {{- if .Values.deployPDA }}
         customServerImage: "docker.io/entando/entando-pam-app-wildfly:latest"
 
