ENG-1736 upgraded to latest images and charts

--- a/templates/db-admin-secret.yaml
+++ b/templates/db-admin-secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.externalDatabase }}
+{{- if .Values.sharedDatabaseService }}
 kind: Secret
 apiVersion: v1
 metadata:
@@ -6,6 +6,6 @@ metadata:
   namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
-  username:  "{{ .Values.externalDatabase.username }}"
-  password: "{{ .Values.externalDatabase.password }}"
+  username:  "{{ .Values.sharedDatabaseService.username }}"
+  password: "{{ .Values.sharedDatabaseService.password }}"
 {{- end }}
