--- a/values.yaml
+++ b/values.yaml
@@ -1,8 +1,10 @@
 app:
   name: quickstart
-  dbms: none
+  dbms: embedded
+  jeeServer: wildfly
 #  singleHostName:  your-hostname
-#externalDatabase:
+#sharedDatabaseService:
+#  createDeployment: true
 #  host: openshift.serv.run
 #  port: 32432
 #  databaseName: sampledb
@@ -11,10 +13,9 @@ app:
 operator:
   supportOpenshift: true
   env:
-    ENTANDO_DOCKER_IMAGE_VERSION_FALLBACK: 6.0.0
     #ENTANDO_DOCKER_REGISTRY_OVERRIDE: docker.io # Remove comment if you want to always use a specific docker registry
     #ENTANDO_DOCKER_IMAGE_ORG_OVERRIDE: entando # Remove the comment if you want to always use a specific docker organization
-    ENTANDO_DEFAULT_ROUTING_SUFFIX: your.domain.suffix.com
+    ENTANDO_DEFAULT_ROUTING_SUFFIX: your.domain.com
     ENTANDO_POD_READINESS_TIMEOUT_SECONDS: "1000"
     ENTANDO_POD_COMPLETION_TIMEOUT_SECONDS: "1000"
     ENTANDO_DISABLE_KEYCLOAK_SSL_REQUIREMENT: "true"
@@ -22,8 +23,12 @@ operator:
     ENTANDO_K8S_OPERATOR_FORCE_DB_PASSWORD_RESET: "true"
     ENTANDO_K8S_OPERATOR_DISABLE_PVC_GARBAGE_COLLECTION: "false"
     ENTANDO_ASSUME_EXTERNAL_HTTPS_PROVIDER: "false"
+    RELATED_IMAGE_ENTANDO_K8S_APP_CONTROLLER: entando/entando-k8s-app-controller@sha256:40fecb462867ed3a783d16e60870ca2645345bb4edfb0705034c974f5fc0beab
+    RELATED_IMAGE_ENTANDO_DE_APP_EAP: entando/entando-de-app-eap@sha256:627c3708fc042d6887db43ff8aa23b959031fe1cf8847535c54fb5aa671d5f4d
+    RELATED_IMAGE_ENTANDO_DE_APP_WILDFLY: entando/entando-de-app-wildfly@sha256:0221a3ca1038e147373eef4a739ad3295c6c79a19d6df47e9804d7aa69cd768a
   tls:
-    caCrt:
-    tlsCrt:
-    tlsKey:
+# Create these secrets for TLS configuration
+#    tlsSecretName: test-tls-secret
+#    caCertSecretName: test-ca-cert-secret
+
 deployPDA: false
