Migtrated to latest operator version

--- a/templates/entando-app-plugin-link.yaml
+++ b/templates/entando-app-plugin-link.yaml
@@ -2,10 +2,10 @@
 kind: "EntandoAppPluginLink"
 apiVersion: "entando.org/v1"
 metadata:
-  name: "{{ .Values.app.name }}-pda-apl"
+  name: "{{ .Release.Name }}-pda-apl"
   annotations:
     entando.org/processing-instruction: defer
 spec:
-  entandoAppName: "{{ .Values.app.name }}"
-  entandoPluginName: "{{ .Values.app.name }}-pda"
+  entandoAppName: "{{ .Release.Name }}"
+  entandoPluginName: "{{ .Release.Name }}-pda"
 {{- end }}
