--- a/templates/entando-keycloak-server.yaml
+++ b/templates/entando-keycloak-server.yaml
@@ -1,13 +1,13 @@
 kind: "EntandoKeycloakServer"
 apiVersion: "entando.org/v1"
 metadata:
-  name: "{{ .Values.app.name }}-kc"
+  name: "{{ .Release.Name }}-kc"
   annotations:
     entando.org/processing-instruction: defer
 spec:
-  dbms: {{ .Values.app.dbms }}
-{{- if .Values.app.singleHostName }}
-  ingressHostName: {{ .Values.app.singleHostName }}
+  dbms: {{ .Values.dbms }}
+{{- if .Values.singleHostname }}
+  ingressHostName: {{ .Values.singleHostname }}
 {{- end}}
   isDefault: true
   replicas: 1
