ENG-2034 fix single host name property

--- a/templates/entando-app.yaml
+++ b/templates/entando-app.yaml
@@ -6,8 +6,8 @@ metadata:
     entando.org/processing-instruction: defer
 spec:
   dbms: {{ .Values.dbms }}
-{{- if .Values.singleHostname }}
-  ingressHostName: {{ .Values.singleHostname }}
+{{- if .Values.singleHostName }}
+  ingressHostName: {{ .Values.singleHostName }}
 {{- end}}
   replicas: 1
   standardServerImage: wildfly
